fixed intro header text alignment to top

--- a/css/intro-header.css
+++ b/css/intro-header.css
@@ -5,17 +5,13 @@
 	position: relative;
 	flex-direction: column;
 	position: fixed;
-
-
-	/* flex-direction: column; */
 	padding: 48px;
 	padding-top: 132px;
-	justify-content: center;
+	/* justify-content: center; */
 	height: 100%;
 	width: 420px;
 	background: var(--light) url('../images/aalok-hello-illo2.svg') bottom left no-repeat;
 	background-size: 300px;
-
 
 	box-shadow: 4px 0px 32px rgba(19, 22, 70, 0.07);
 	overflow: hidden;
@@ -41,19 +37,16 @@
 }
 
 #intro-header h1 {
-
 	font-size: 34px;
 	margin-bottom: 24px;
 	margin-top: var(--medium);
 	line-height: 130%;
-
 }
 
 #intro-header h2 {
 	font-size: 20px;
 
 	margin-bottom: 48px;
-
 
 	margin-top: 0;
 }
@@ -92,15 +85,12 @@
 	}
 }
 
-
 @media screen and (max-width: 1024px) {
 	#intro-header h1 {
 		font-size: 40px;
 	}
 	#intro-header h2 {
 		font-size: 24px;
-
-
 	}
 }
 
